[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-inspector-tool"
version = "0.1.0"
description = "A modular data sanitization and exploration engine for CSV datasets."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
  { name = "Ashen", email = "e23022@eng.pdn.ac.lk" }
]
dependencies = [
  "numpy>=1.21",
  "pandas>=1.3",
  "scikit-learn>=1.0",
  "scipy>=1.7",
  "pydantic>=2.0",
  "plotly>=5.0"
]

[project.optional-dependencies]
colab = ["google-colab"]

[project.urls]
Repository = "https://github.com/fratlеader/data-inspector-tool"

[tool.setuptools]
packages = ["data_inspector"]
